data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2036.wast
;; 7. **Test Name: `br_table` with an Empty Else Block**    - **Description**: The `if` instruction includes a valid `then` block with `br_table` while having an empty (no instructions) `else` block. This case checks if empty branches are correctly handled.    - **Constraint Checked**: Proper handling of empty branches.    - **Relation to Edge Case**: Validates whether implementations can handle branch cases with no instructions.

(assert_invalid
  (module (func $br_table_empty_else
    (i32.const 0)
    (if (result i32) (br_table 0) (else))
  ))
  "type mismatch"
)